# libipc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean-dir  ipc.c  ipc.h  sample-client.c  sample-hello.c  sample-server.c
samples/: hello.c  msg-client.c  msg-server.c
