cmake_minimum_required(VERSION 3.4)
project (ipc-project C)
cmake_policy(SET CMP0065 NEW)
set(CMAKE_BUILD_TYPE Release)

file(GLOB sources ipc*.c ipc*.h)
file(GLOB sample-server-src samples/msg-server.c)
file(GLOB sample-client-src samples/msg-client.c)
file(GLOB sample-hello-src samples/hello.c)

add_library(ipc SHARED ${sources})
add_library(ipc-static STATIC ${sources})
add_custom_target(samples)
add_executable(sample-server EXCLUDE_FROM_ALL ${sample-server-src})
add_executable(sample-client EXCLUDE_FROM_ALL ${sample-client-src})
add_executable(sample-hello EXCLUDE_FROM_ALL ${sample-hello-src})
add_dependencies(samples sample-server sample-client sample-hello ipc)

set(_COMPILE_OPT -std=c11 -pipe -ftree-vectorize -ffast-math -flto -Wall -Wextra -Wpedantic)
set(_LINK_OPT "-flto -fuse-ld=gold")
target_compile_options(ipc PRIVATE ${_COMPILE_OPT})
target_compile_options(ipc-static PRIVATE ${_COMPILE_OPT})
target_compile_options(sample-server PRIVATE ${_COMPILE_OPT})
target_compile_options(sample-client PRIVATE ${_COMPILE_OPT})
target_compile_options(sample-hello PRIVATE ${_COMPILE_OPT})

set_target_properties(ipc PROPERTIES LINK_FLAGS ${_LINK_OPT})
set_target_properties(sample-server PROPERTIES LINK_FLAGS ${_LINK_OPT})
set_target_properties(sample-client PROPERTIES LINK_FLAGS ${_LINK_OPT})
set_target_properties(sample-hello PROPERTIES LINK_FLAGS ${_LINK_OPT})
set_target_properties(ipc-static PROPERTIES OUTPUT_NAME ipc)

add_definitions(-D_POSIX_C_SOURCE=199309L)

target_include_directories(sample-server BEFORE PUBLIC ${CMAKE_SOURCE_DIR})
target_include_directories(sample-client BEFORE PUBLIC ${CMAKE_SOURCE_DIR})
target_include_directories(sample-hello BEFORE PUBLIC ${CMAKE_SOURCE_DIR})

target_link_libraries(sample-server ipc-static)
target_link_libraries(sample-client ipc-static)
target_link_libraries(sample-hello ipc-static)
